--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Library App</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>My Library</h1>
+      <button id="new-book-btn">Add New Book</button>
+    </header>
+    <main>
+      <div id="book-container"></div>
+    </main>
+    <dialog id="book-form-dialog">
+      <form id="book-form">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required />
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author" required />
+        <label for="pages">Pages:</label>
+        <input type="number" id="pages" name="pages" required />
+        <label>
+          <input type="checkbox" id="read" name="read" />
+          Read
+        </label>
+        <button type="submit">Add Book</button>
+      </form>
+    </dialog>
+    <script src="script.js" defer></script>
+  </body>
 </html>
